test/tests/errors/error-class-func-body-invalid.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        public func a(): int {
            "test"
        }
    }
}